archive/claim-cards/v275/asbestos_hills_surficial_alteration.md
# CLAIM CARD — asbestos_hills_surficial_alteration  (v275, seed 42, 120 steps)

**Anchor:** Asbestos Hills, Northern Cape, South Africa — crocidolite-bearing banded iron formation; Gutzmer-Beukes-Cairncross surficial-alteration interpretation
**Deposit:** Execute the Gutzmer, Beukes & Cairncross (2004) field model: an older metamorphic crocidolite seam is exposed to near-surface silicification and oxidation. Tiger's eye can form only after the mass ledger accepts oxidative crocidolite loss.
**Initial:** 300 °C, 1 kbar, wall=tabular
**Model digest:** Pfluid:kbar-0.001..4.4|Ksp-pressure:SUPCRTBL-delta-logK-reaction-grid+density-mask+continuous-temperature-edge-hold+no-pressure-extrapolation-v2|sulfate-Ksp:USGS-PHREEQC-wateq4f-analytic5+explicit-temperature-envelope-v1|carbonate-rate:PWP-omega2over3-raw+production-positive-affinity-series-resistance-Aover1plusA+molarMgCa+pKwTP-hydroxycarbonates-v2|chemistry-evidence:ppm-mgkg-solvent+carbonate-equivalent-mass-labels-v1|SCI02-locality:PHREEQC-SUPCRTBL-anhydrite-classification+ledgered-carbonate-pulses-v1|aragonite-selector:hard-molarMgCa>=1.1-OR-explicit-open-spring+shallowP<=0.10kbar+40..100C-OR-Co5e-4..<1e-2molal+CoCa<0.6+20..30C-OR-highPstable-v5|aragonite-Sr:Wassenburg16-DSr1.38+/-0.53+accepted-zone-booked-return-v1|aragonite-Co:Barber75+GonzalezLopez18+equilibrium-and-effective-booked-DCo0.1+accepted-zone-booked-return-v2|CaCO3:Hacker05-negative-linear+/-1kbar|Prock:Pattison92-AndSil-16+/-3barC|stress:instant-resolved-shear-stable-grain-v2|event-fluid:locality-authored-material-transform+canonical-catalog-deep-match+owner-bound-MVT-90sulfide-30sulfate+receipted-exact-pore-fluid-export-replacement+atomic-heat-only-default-v4|elmwood-barite:explicit-sulfate-floor+receipted-Ba-hiatus-replacement+causal-next-pulse-masked-layers+terminal-clay-rind-v1|carbonate-boundary:PB82-dilute+DIC+reducedAlk+ideal-headspace+open-ledger+atomic-recharge+titration+accepted-zone-receipts+bulk-guard+equal-volume-mixed+solved-pCO2-uncertainty-v3|sphalerite-Ge:Belissont-Kd1708-cap22000-mass+dissolution-v2|gypsum-aw:ChirifeResnik84-NaCl-proxy-v1|silica-phase:Fournier-amorphous+chalcedony+quartz-Ostwald+reactive-pool+Manning94-grid-bounded-pressure+booked-transition+chemistry-competition-v5|surface-growth:all-cell-invalidated-exact-triangle-area+connected-patch+mass-booked-thickness+exact-shared-triangle-stratigraphy+executed-raycast+LOD-invariant-relief-v4|surface-anchor:position+void-normal+authenticated-triangle-barycentric+immutable-source-snapshot+constructor-fixed-production-provider+field-position-neighborhood-remap+separate-nearest-WallMesh-chemistry-projection+physical-host-anchor-inheritance+derived-live-remap-cache+exact-origin-edge-geodesic-occupancy+physical-normal-architecture-placement+source-qualified-fabrics+provider-timeline-replay+historical-helper-cursor+renderer-authority-lock+replay-shape-tessellation-fail-closed-v7|cavity-shape:seeded-exact-bubble-union+immutable-authored-radial-masks+pole-regular-sin2phi-cos2theta+analytic-pole-caps+digest-ledger-star-shaped-cartesian-production-v4|cavity-authority:default-before-water-chemistry-nucleation+fixed48-world-frame+zero-isovalue+Freudenthal-closed-manifold+signed-spacingOver4096-near-zero-scalar-floor+critical-contact-rejection+exact-volume-transaction+subresolution-chemistry-withheld+atomic-preflight+64-convergence+field-agreement+exact-contract-cache+semantic-startup-receipt+authenticated-replay-v4|water-boundary:mm-above-authenticated-current-floor+legacy-ring-to-authenticated-span-conversion+actual-vertex-chemistry-bands+topology-independent-wall-tint+field-clipped-interface+append-only-historical-appearance-ledger-v1|tiger-eye:HeaneyFisher03-antitaxial-crack-seal+GutzmerBeukesCairncross04-e44-surficial-alteration+BIF-physics-host+booked-NaFeSi-substrate+zeroSiO2-cumulative-O2closed-overprint+HF-only+local-tiger-iron+enum-fail-closed-v2|Mn-oxide-phase:birnessite-layer+Ba-romanechite-2x3+booked-birnessite-to-Mg-todorokite-3x3-at95-200C+pyrolusite-endmember-v2|CaSO4-phase:Hardie67-aw+P14.7Ckbar+single-evaluator+mass-balanced-replacement-v1|sulfur-ledger:sulfide+sulfate+elemental+declaration-driven-spatial+valence-specific-supersaturation+authenticated-midrun-activation+phase-resolved-testimony-v5|native-S-oxidation:production-open+O2limited-closed+diagnostic-H-v1|sulphur-bank-HgS:zoned-association-not-S0-substrate-v1|wall-dissolution:atomic-preattack-local-pH+fractional-full-surface-shielding+geodesic-feeder+USGS1248-26C-molar-volume+reported-uncertainty-per1kg+exact-Cartesian-Freudenthal-volume-ledger+validated-depth-closure+capacity-derived-equivalent-diameter+atomic-prerun-creative-reauthoring-v4|solid-occupancy:all-nondissolved+positive-only-size-cap+growth-shadowing-not-chemical-seal+dissolution-remains-local-mass-balanced+zone-integrated-volume+chalcanthite-local-CuSO4-decay-v3|cavity-seal:repeatable-transition+accepted-dissolution-immediate-below95pct-rearm+same-or-later-refill-testimony-v2|sicily-SDAOM:methane-1C1S+whole-scenario-carbon-ledger-v2|calcite-Mn:manganocalcite-excess<1.2-v1|HMC-solid-solution:Mucci87-seawater-DMgT+MucciMorse83-MgCa7.5..20-seawater25C+unknown-outside+BP89-metastable-miscibility+25C-activity-calibration+bounded-RT-extrapolation+omegaGT1-locality-licensed-heterogeneous-wall-approximation+zone-formula+dynamic-competition-stoichiometry+booked-return-v5|CuZn-carbonates:Alwan80+Kaluza24-observer-only-v1|growth-budget:calibrated-axial-mmolkg+zone-formula-ratio+booked-return-v7|dissolution:LIFO-booked-axial-inventory+5um-floor-v2|dissolution-overprint:flat-face-rate+coupled-return-dGgate+render-geometry+enforced-booked-return+replay-healing-v3|fluorite-etch:Godinho12-{100}-21C-pH3.6-I0.05-468h+Cama-dG<=-7+NaCl-closed-analogue+250x-schematic-pores+growth-shadow-access+authenticated-current-enclosure-withhold-v4|carbonate-boundary:conserved-only+explicit-initial-DIC-alk+fail-closed-open-reservoir+sabkha-recharge+zero-charge+truthful-reverse-flow-v3|engine-fluid:transactional-staged-crystal+actual-supplement+Au-ledger-v3|beryl:K36-postHF-recovery-v1|halite:vadose-propensity0.8-v1|borax-tincalconite:pure60.8C+halite-sat39.6C-oneway-v1|competition:accepted-axial-timescale+actual-zone-formula+residual-round-redistribution+single-evaluation-full-fill-negative-v5|thermal-field:LTE-voxel+geometry-weighted-finite-volume-k<=1/6+order-independent-sources+rock-boundary+per-voxel-one-way-authored-ambient+pause-retain+local-nucleation-growth-morphology+replay-v3|diagnosis:production-nucleator+local-max-context+causal-supersat+calibrated-budget-v5|scenario-contracts:headline-deterministic+accessory-deterministic-with-rationale+3seed-statistical+aspirational+fail-closed-four-tier-locality-license+owner-bound-events+canonical-locality-event-deep-match+causal-event-prerequisite+valence-correct-commissioning-reconciliation-v10|bingham:RedmondEinaudi10-pulsed-hypogene+copper-history-before-gold+gold-aspirational-without-bornite+step85-exhumation+P0.001kbar+35to25C+no-reheat+supergene-malachite-v3|bisbee:Graeme-district+post-mining-inventories+alunite-statistical+jarosite-deterministic+siderite-aspirational+zero-CoNi+8-locality-exclusions+no-forced-halite-brine-v3|tsumeb:TSNB159-confirmed-gypsum-recharge+TSNB301-questionable-rhodochrosite-excluded-v1|wittichen:authored-cooling-through-step170+ambient-thermal-pulses-disabled+step170-vadose-boundary+oxidized-sulfate-does-not-sulfidize-silver-v3|weathering-epilogue:strict-normalized-schema+inclusive-bounded-window+invalid-product-block+authored-drainage+3D-vadose+S-conserved+O2-receipt+CO2-light+same-site-precursor-history-v2|cation-sinks:accepted-shell-return-only+schneeberg-zero-Zn-all-step-finite-voxel-receipt+pharmacolite-dissolved-molar-cation-proxy+48-field-consumer-audit-v2|koettigite:Ciesielczuk20-pH<3+dissolved-molar-Zn-majority-proxy+Co-solid-solution+Hill79-Ni<=5molpct+Bowell14-Tsumeb-third-zone-only-v3|roughton-gill:Bridges11-quartz-carbonate-primary+carbonate-buffered-malachite-cerussite+silica-hemimorphite+step215-pyromorphite-encrusting-plumbogummite+signed-boundary-receipts-v3|run-testimony:actual-step+sample-index+nucleation+positive-layer-formula+returned-dissolution-inventory+habit-extent+hydration-transfer+competition-allocation+solid-solution+CDR+enclosure-liberation-lifecycle+controlled-production-engine-witness+solid-state-transformation+null-confining-pressure-v6|locality-boundary:authored-pH-buffer+heat-only-ambient-pulse+creative-exact-authority-v1|crystal-size:individual-record-vs-aggregate-habit+celestine46cm+unresolved-wulfenite-v1|replacement:actual-parent-loss+matching-route-trigger+outline-inheritance-v1|enclosure:positive-nonphantom-solid-guest+same-step-net-positive-host-material+exact-substrate-contact-or-0.5mm-physical-lateral-front+substrate-first-deterministic-host+physical-solid-geometric-reach+shared-chemistry-current-topology-receipt-strict-chronological-lifecycle-authority+authenticated-same-crystal-host-phase-lineage-and-trigger-receipts+slowing-guest+physical-solid-threshold-partial-retreat-liberation+source-specific-front-film-reversal+replay-authenticated-lifecycle-v10|transformation-reactivity:product-only-acid-retreat+LIFO-booked-return+explicit-light-realgar+authenticated-controlled-product-witness-v2|agent-runtime:explicit-sulfur-valence+ambiguous-S-rejected+owner-bound-MVT-90sulfide-30sulfate+narrow-parity-v1|deccan:Savda-Nashik-silica+scolecite-mesolite+heulandite-stilbite+apophyllite-v2|transition-locality-exclusion:target-gated-v1|evidence-binding:exact-browser-dist-runtime-data+producer-contracts+timestamp-free-strips+mechanism-witness-artifact+aggregate-artifact-sha256-v3|save-identity:version+model+scenario+voxel-fluids+dedicated-rng+nucleation-shared-seed+movement-state+growth-shadow-state+water-height+full-zone-ledgers+enclosure-lifecycle+transformation-histories-and-exposure-counters+cavity-evolution-chain+wall-depths+replay-cursor-fail-closed-v7
**Scenario spec hash:** 3ba5d865fbd93efeb0e91ad5c730d4f9cdf05985489bca46cb94ea753aa1d9f4
**Archived strip SHA-256:** 0326eee43f8d880f7b4cf68e4283fe316dab20713652c09d4bb96436d4da5ca3

## Model boundary: calibrated growth budget
  - Kind: calibrated stoichiometric axial-growth budget proxy
  - Basis: 0.00008 mmol formula/kg solvent per accepted axial micrometre
  - Preserves: formula mole ratios and exact closure of booked inventory on dissolution
  - Limitation: not physical solid mass or volume; demand is independent of crystal size, habit, density, and rendered shell volume

## Expectation contract
**Deterministic headline (4):** crocidolite, tigers_eye, magnetite, hematite
**Deterministic accessories (6):** amosite — Miyano and Klein's metamorphosed-iron-formation stability field permits crocidolite-to-amosite competition before exposure.; siderite — An Fe-carbonate precursor/accessory is compatible with the older metamorphic BIF seam.; quartz — Silica deposition accompanies the older seam and subsequent silicification, but is subordinate to the tiger's-eye replacement contract.; goethite — A supported Fe-oxyhydroxide product of the authored near-surface oxidative alteration stage.; opal — Hydrated silica is a plausible transient competitor during low-temperature surficial silicification.; lepidocrocite — A minor Fe-oxyhydroxide competitor is plausible in the late vadose oxidation window, subordinate to hematite/goethite.
**Statistical (0):** (none)
**Aspirational (0):** (none)
**Locality exclusions (0):** (none)

**Cited sources:**
  - Gutzmer J., Beukes N.J. & Cairncross B. (2004) — New interpretation of the origin of tiger's-eye: Comment. Geology 32(1):e44. DOI 10.1130/0091-7613-32.1.e44. Field transition from tiger's-eye through hawk's-eye to crocidolite and restriction to the shallow silicified/goethitized zone.
  - Miyano T. & Klein C. (1983) — Evaluation of the Stability Relations of Amphibole Asbestos in Metamorphosed Iron-Formations. Mining Geology 33:213-222. DOI 10.11456/shigenchishitsu1951.33.213. Crocidolite/amosite stability and BIF assemblages at 150-450°C.

**Claim-level citations:**
  - (none authored)

## Paragenetic order as grown (10 species)
| # | mineral | first step | nucleations | transformations | pathway |
|--|--|--|--|--|--|
| 1 | amosite | 1 | 3 | 0 | nucleation |
| 2 | crocidolite | 1 | 3 | 0 | nucleation |
| 3 | magnetite | 1 | 2 | 0 | nucleation |
| 4 | siderite | 1 | 1 | 0 | nucleation |
| 5 | quartz | 28 | 1 | 0 | nucleation |
| 6 | goethite | 58 | 1 | 0 | nucleation |
| 7 | hematite | 58 | 1 | 0 | nucleation |
| 8 | opal | 58 | 5 | 0 | nucleation |
| 9 | tigers_eye | 59 | 3 | 0 | nucleation |
| 10 | lepidocrocite | 82 | 1 | 0 | nucleation |

**Surprises (present but absent from all authored expectation tiers):** (none)
**Deterministic no-shows:** (none)
**Statistical no-shows (non-failing):** (none)
**Aspirational no-shows (non-failing):** (none)
**Excluded-locality appearances (failing):** (none)

## Environment trajectory (first → last, [min,max])
  - T: 298.26089435471107 → 25.000000000000004 °C  [25.000000000000004, 298.26089435471107] (raw_simulation_state)
  - pH: 9 → 6.9   [6.9, 9] (raw_simulation_state)
  - Eh: 36.789507835554815 → 220 mV  [36.789507835554815, 220] (raw_simulation_state)
  - salinity: 5 → 5 psu  [5, 5] (raw_simulation_state)
  - O2: 0.28 → 1 ppm (mg/kg solvent)  [0.28, 1] (raw_simulation_state)
  - concentration: 1 → 1 ×  [1, 1] (raw_simulation_state)

## Saturation drivers
  - SI_calcite: -2.15 → -3.155  [-3.155, -1.78]
  - SI_aragonite: -2.273 → -3.336  [-3.339, -1.843]
  - SI_dolomite: -4.108 → -6.108  [-6.11, -3.121]
  - SI_HMC: -1.142 → -3.213  [-3.213, -0.832]
  - SI_siderite: 2.262 → 0.567  [0.567, 2.507]
  - SI_selenite: -8 → -8  [-8, -8]
  - SI_anhydrite: -8 → -8  [-8, -8]
  - SI_barite: -8 → -8  [-8, -8]
  - SI_celestine: -8 → -8  [-8, -8]

## Authored pressure/stress/phase context (claim, not run testimony)
  - Fluid pressure: 1 kbar — cavity-fluid pressure; never silently substituted for rock pressure or differential stress
  - Rock pressure: 1 kbar — rock/confining pressure used by metamorphic phase fields
  - Calcite/aragonite boundary: 2.771 kbar; secure aragonite=false
  - Al2SiO5: unconstrained (nominal n/a) — Outside the 400-700 C validity envelope of this linearized Pattison grid.
  - Gypsum/anhydrite pure-water boundary: 72.70 °C; initial a_w=0.997 ±0.020 (temperature-extrapolation)
  - Ksp pressure rule: reaction-specific SUPCRTBL delta-logK grid; bilinear only inside density and per-reaction temperature masks; no constant reaction-volume proxy
    - calcite: temperature-clamped-to-envelope; active=true; ΔlogK=0.85410582; Requested 300 C is outside this reaction's 10-90 C fitted envelope; the nearest 90 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - aragonite: temperature-clamped-to-envelope; active=true; ΔlogK=0.81583958; Requested 300 C is outside this reaction's 10-90 C fitted envelope; the nearest 90 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - dolomite: temperature-clamped-to-envelope; active=true; ΔlogK=2.53745479; Requested 300 C is outside this reaction's 10-250 C fitted envelope; the nearest 250 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - siderite: temperature-clamped-to-envelope; active=true; ΔlogK=0.99202884; Requested 300 C is outside this reaction's 10-200 C fitted envelope; the nearest 200 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - rhodochrosite: temperature-clamped-to-envelope; active=true; ΔlogK=0.94952089; Requested 300 C is outside this reaction's 10-200 C fitted envelope; the nearest 200 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - anhydrite: active; active=true; ΔlogK=1.78298007; SUPCRTBL reaction grid with bilinear interpolation; log10(Ksp) shifts by +1.783 relative to 1 bar at the same temperature.
    - barite: active; active=true; ΔlogK=1.69969134; SUPCRTBL reaction grid with bilinear interpolation; log10(Ksp) shifts by +1.700 relative to 1 bar at the same temperature.
    - celestine: temperature-clamped-to-envelope; active=true; ΔlogK=0.7997092; Requested 300 C is outside this reaction's 10-200 C fitted envelope; the nearest 200 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - selenite: unsupported-reaction; active=false; ΔlogK=0; Gypsum is absent from the SUPCRTBL solid-species set; the Hardie water-activity/temperature phase selector remains active, but no Ksp pressure correction is fabricated.
  - Differential stress: no authored stress event.

## Executed pressure/stress/phase testimony (archived run)
**Source:** archived executed run state; not reconstructed from scenario definition
  - Fluid pressure: 1 → 0.001 kbar [0.001, 1], n=120
  - Rock/confining pressure: 1 → 0.001 kbar [0.001, 1], n=120
  - Temperature: 298.26089435471107 → 25.000000000000004 °C [25.000000000000004, 298.26089435471107], n=120
  - Secure aragonite assessment: 0/120 executed steps; first={"boundary_kbar":2.760843793419369,"secure_aragonite":false}, last={"boundary_kbar":2.9888905400000003,"secure_aragonite":false}
  - Al2SiO5 executed phase counts: {"unconstrained":120}; first=unconstrained, last=unconstrained
  - Executed stress: no stress event recorded by the run.
  - Mineral transformations: none executed.
  - Transformation reactivity commissioning: controlled production-engine boundary; not a locality trajectory; artifact vugg-mechanism-witnesses-v1/23bade18c1f579f7afdbbe5a8a19318ab3e4ab79641548cf4359a550b1589a83.
    - No controlled reactivity witness is applicable to a transformation product in this locality run.
  - Conserved carbonate boundary: not enabled for this archived run.

## Declared non-sulfur fluid-boundary transactions (archived run)
**Source:** archived declared non-sulfur fluid-boundary transactions; exact rows are authenticated by the strip SHA-256
  - Closure: 2/2 transactions; all_closed=true.
  - Step 58: closed=true; declarations=[{"kind":"replacement","source":"Asbestos Hills planation-surface oxidizing-water replacement","fields":{"O2":0.82}},{"kind":"addition","source":"Asbestos Hills planation-surface silicification boundary","fields":{"SiO2":250}}]; testimony=[{"field":"O2","before":0.28,"after":0.82,"declaredAddition":0,"declaredReplacementTarget":0.82,"declaredDelta":0.5399999999999999,"declaredImports":0.5399999999999999,"declaredExports":0,"actualDelta":0.5399999999999999,"error":0,"tolerance":1e-7,"closed":true},{"field":"SiO2","before":650,"after":900,"declaredAddition":250,"declaredReplacementTarget":null,"declaredDelta":250,"declaredImports":250,"declaredExports":0,"actualDelta":250,"error":0,"tolerance":9.000000000000001e-7,"closed":true}].
  - Step 82: closed=true; declarations=[{"kind":"replacement","source":"Asbestos Hills waning oxidizing-water replacement","fields":{"O2":1}},{"kind":"addition","source":"Asbestos Hills waning silica-rich weathering boundary","fields":{"SiO2":100}}]; testimony=[{"field":"O2","before":0.82,"after":1,"declaredAddition":0,"declaredReplacementTarget":1,"declaredDelta":0.18000000000000005,"declaredImports":0.18000000000000005,"declaredExports":0,"actualDelta":0.18000000000000005,"error":0,"tolerance":1e-7,"closed":true},{"field":"SiO2","before":900,"after":1000,"declaredAddition":100,"declaredReplacementTarget":null,"declaredDelta":100,"declaredImports":100,"declaredExports":0,"actualDelta":100,"error":0,"tolerance":0.0000010000000000000002,"closed":true}].

## Crystal enclosure receipts (archived run)
**Source:** accepted host-over-guest and later liberation events from the archived executed run
  - Step 9: crocidolite #7 enclosed magnetite #4; route=host-on-guest; host net layer=50.049821940822795 µm; distance/reach=0/3.859983472605066 mm; size ratio=4.854420291188312; guest recent=1.7847763837797956 µm; guest core/loss/remaining=38.55628726245585/0/38.55628726245585 µm; partial loss=false.
  - Final inclusion status: 1 current; 1 accepted and 0 liberated.

## Sulfur reservoir identity and conservation (archived run)
**Source:** archived phase-resolved sulfur ledger; exact samples are authenticated by the strip SHA-256
  - Sulfur ledger: explicit valence-resolved sulfur pools were not enabled for this scenario.

## Layer, solid-solution, competition, and habit testimony
  - Accepted layers: 1364; formula-bearing=0; solid-solution=0; binding competition=0; reactive transformation etches=0; masked horizons=0.
  - Habit crystal 1: amosite; fibrous_asbestiform; extent=individual; forms=["parallel-bundle brown silky fibers","cummingtonite-grunerite asbestos","\"brown asbestos\" of South African commerce (Penge type)","WHO-recognized health-hazard variety"]; size authority={"extent_kind":"individual","cap_cm":6,"record_cm":3}; CDR=null.
  - Habit crystal 2: crocidolite; fibrous_asbestiform; extent=individual; forms=["parallel-bundle deep blue silky fibers","riebeckite asbestos — \"BLUE ASBESTOS\"","the most carcinogenic asbestos variety per WHO + Frank et al. 2002","Wittenoom Australia + Northern Cape SA type material"]; size authority={"extent_kind":"individual","cap_cm":8,"record_cm":4}; CDR=null.
  - Habit crystal 3: siderite; botryoidal; extent=individual; forms=["botryoidal mammillary crusts","tan-brown rounded aggregates"]; size authority={"extent_kind":"individual","cap_cm":20,"record_cm":10}; CDR=null.
  - Habit crystal 4: magnetite; octahedral; extent=individual; forms=["{111} octahedron","metallic black"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 5: amosite; fibrous_asbestiform; extent=individual; forms=["parallel-bundle brown silky fibers","cummingtonite-grunerite asbestos","\"brown asbestos\" of South African commerce (Penge type)","WHO-recognized health-hazard variety"]; size authority={"extent_kind":"individual","cap_cm":6,"record_cm":3}; CDR=null.
  - Habit crystal 6: amosite; fibrous_asbestiform; extent=individual; forms=["parallel-bundle brown silky fibers","cummingtonite-grunerite asbestos","\"brown asbestos\" of South African commerce (Penge type)","WHO-recognized health-hazard variety"]; size authority={"extent_kind":"individual","cap_cm":6,"record_cm":3}; CDR=null.
  - Habit crystal 7: crocidolite; fibrous_asbestiform; extent=individual; forms=["parallel-bundle deep blue silky fibers","riebeckite asbestos — \"BLUE ASBESTOS\"","the most carcinogenic asbestos variety per WHO + Frank et al. 2002","Wittenoom Australia + Northern Cape SA type material"]; size authority={"extent_kind":"individual","cap_cm":8,"record_cm":4}; CDR=null.
  - Habit crystal 8: crocidolite; fibrous_asbestiform; extent=individual; forms=["parallel-bundle deep blue silky fibers","riebeckite asbestos — \"BLUE ASBESTOS\"","the most carcinogenic asbestos variety per WHO + Frank et al. 2002","Wittenoom Australia + Northern Cape SA type material"]; size authority={"extent_kind":"individual","cap_cm":8,"record_cm":4}; CDR=null.
  - Habit crystal 9: magnetite; octahedral; extent=individual; forms=["{111} octahedron","metallic black"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 10: quartz; prismatic; extent=individual; forms=["m{100}","r{101}","z{011} dominant"]; size authority={"extent_kind":"individual","cap_cm":1200,"record_cm":600}; CDR=null.
  - Habit crystal 11: goethite; botryoidal/stalactitic; extent=individual; forms=["botryoidal masses","velvety surfaces"]; size authority={"extent_kind":"individual","cap_cm":60,"record_cm":30}; CDR=null.
  - Habit crystal 12: hematite; botryoidal; extent=individual; forms=["kidney-ore texture"]; size authority={"extent_kind":"individual","cap_cm":60,"record_cm":30}; CDR=null.
  - Habit crystal 13: opal; botryoidal_mound; extent=individual; forms=["botryoidal grape-cluster mounds","reniform terminations"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 14: opal; botryoidal_mound; extent=individual; forms=["botryoidal grape-cluster mounds","reniform terminations"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 15: tigers_eye; alteration_preserved_fabric; extent=individual; forms=["gold-brown chatoyant alteration band","quartz preserving the orientation of older crocidolite seams","near-surface silicification and oxidation fabric"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 16: opal; botryoidal_mound; extent=individual; forms=["botryoidal grape-cluster mounds","reniform terminations"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 17: opal; botryoidal_mound; extent=individual; forms=["botryoidal grape-cluster mounds","reniform terminations"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 18: tigers_eye; alteration_preserved_fabric; extent=individual; forms=["gold-brown chatoyant alteration band","quartz preserving the orientation of older crocidolite seams","near-surface silicification and oxidation fabric"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 19: opal; botryoidal_mound; extent=individual; forms=["botryoidal grape-cluster mounds","reniform terminations"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 20: tigers_eye; alteration_preserved_fabric; extent=individual; forms=["gold-brown chatoyant alteration band","quartz preserving the orientation of older crocidolite seams","near-surface silicification and oxidation fabric"]; size authority={"extent_kind":"individual","cap_cm":15,"record_cm":7.5}; CDR=null.
  - Habit crystal 21: lepidocrocite; platy_scales; extent=individual; forms=["{010} platy scales","perfect basal cleavage (mica-like)"]; size authority={"extent_kind":"individual","cap_cm":0.5,"record_cm":0.25}; CDR=null.

## Scenario notes (author's own rationale)
> This paired scenario executes the field interpretation in Gutzmer, Beukes & Cairncross (2004, Geology 32:e44): tiger's-eye is restricted to a shallow silicified/goethitized planation surface and grades downward through hawk's-eye to unaltered crocidolite. They argue for later alteration of older crocidolite and state that the result is not a pseudomorph sensu stricto.

> The initial 300°C stage grows the older BIF amphibole-asbestos seam inside the Miyano & Klein (1983) stability family. At step 58, a silica-rich oxidizing surface boundary arrives; the nucleator remains locked until a negative oxidative crocidolite zone is actually accepted by the mass-balanced growth transaction.

> The simulated 40-60°C surface values are transparent process proxies. The paper constrains field depth relationships, not a unique temperature-pressure path; pressure 1.0 kbar belongs only to the precursor metamorphic stage, and the event explicitly resets fluid and rock pressure to the simulator's 0.001 kbar atmospheric floor.

> Shape seed 2004 is authored independently from gameplay seed 42 and records the publication year of the modeled comment.
